--- a/test.ipynb
+++ b/test.ipynb
@@ -3,22 +3,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Data Loader Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from DishDive.helper.loader.data_loader import LoadData"
+    "from DishDive.helper.loader.data_loader import LoadData\n",
+    "\n",
+    "data_loader = LoadData('./data/filtered.csv')\n",
+    "data = data_loader.load()\n",
+    "type(data)"
    ]
   },
   {
@@ -30,18 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_loader = LoadData('./data/filtered.csv')\n",
-    "data = data_loader.load()\n",
-    "type(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,21 +50,31 @@
       "c:\\_Files\\Programming\\Work\\Sazim\\Restaurant Backend\\venv2\\Lib\\site-packages\\torch\\_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
       "  return self.fget.__get__(instance, owner)()\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "db_loader = LoadDB('./chroma_db')\n",
+    "vectorstore = db_loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langchain_community.vectorstores.chroma.Chroma at 0x1a02294d850>"
+       "<langchain_community.vectorstores.chroma.Chroma at 0x210451ccf10>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db_loader = LoadDB('./chroma_db')\n",
-    "db_loader.load()"
+    "vectorstore"
    ]
   },
   {
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "model-00001-of-00003.safetensors: 100%|██████████| 4.94G/4.94G [20:47<00:00, 3.96MB/s]\n",
-      "model-00002-of-00003.safetensors: 100%|██████████| 5.00G/5.00G [20:50<00:00, 4.00MB/s]\n",
-      "model-00003-of-00003.safetensors: 100%|██████████| 4.54G/4.54G [19:08<00:00, 3.95MB/s]\n",
-      "Downloading shards: 100%|██████████| 3/3 [1:00:48<00:00, 1216.26s/it]\n"
+      "c:\\_Files\\Programming\\Work\\Sazim\\Restaurant Backend\\venv2\\Lib\\site-packages\\transformers\\models\\auto\\configuration_auto.py:1085: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
+      "  warnings.warn(\n",
+      "c:\\_Files\\Programming\\Work\\Sazim\\Restaurant Backend\\venv2\\Lib\\site-packages\\transformers\\models\\auto\\auto_factory.py:472: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -121,8 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:37<00:00, 12.65s/it]\n",
-      "generation_config.json: 100%|██████████| 111/111 [00:00<00:00, 111kB/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:22<00:00,  7.57s/it]\n"
      ]
     },
     {
@@ -135,15 +132,170 @@
    ],
    "source": [
     "model_loader = LoadModel()\n",
-    "model_loader.load()"
+    "model = model_loader.load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from DishDive.model.processor import Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\_Files\\Programming\\Work\\Sazim\\Restaurant Backend\\venv2\\Lib\\site-packages\\transformers\\models\\auto\\tokenization_auto.py:711: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = Tokenizer()\n",
+    "tokenizer = tokenizer.get_tokenizer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Retriever"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = vectorstore.as_retriever(k = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VectorStoreRetriever(tags=['Chroma', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.chroma.Chroma object at 0x00000210451CCF10>)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retriever"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Query Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from DishDive.query_pipeline.generate import Generator\n",
+    "\n",
+    "generator  = Generator(model, tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standalone_query_generation_llm = generator.standalone_query()\n",
+    "response_generation_llm = generator.response()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from DishDive.instructor.prompt import Prompt\n",
+    "\n",
+    "prompts = Prompt()\n",
+    "\n",
+    "CONDENSE_QUESTION_PROMPT = prompts.question_promt()\n",
+    "ANSWER_PROMPT = prompts.response_prompt()\n",
+    "DEFAULT_DOCUMENT_PROMPT = prompts.document_prompt()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LLMChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from DishDive.conversation.chain import LLMChain\n",
+    "\n",
+    "llm_chain = LLMChain(CONDENSE_QUESTION_PROMPT, ANSWER_PROMPT, retriever, standalone_query_generation_llm, response_generation_llm)\n",
+    "memory, final_chain = llm_chain.get_chain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from DishDive.conversation.chat import Chat\n",
+    "\n",
+    "def inference(question):\n",
+    "\n",
+    "    chatbot = Chat(question, final_chain, memory)\n",
+    "    response = chatbot.ask_LLM()\n",
+    "    \n",
+    "    \n",
+    "    print(f\"Question: {response['question']}\")\n",
+    "    print('------------------------------------------------------------------')\n",
+    "    print(f\"Answer: {response['answer']}\")\n",
+    "    print('------------------------------------------------------------------')\n",
+    "    print(f\"Context: {response['context']}\")\n",
+    "    print('------------------------------------------------------------------')"
+   ]
   },
   {
    "cell_type": "code",
